--- a/anuan.env
+++ b/anuan.env
@@ -1,7 +1,7 @@
-API_ID = 20783349
-API_HASH = ca6822288826f84ade23f7a097c0281c
-BOT_TOKEN = 6828449937:AAGJXGVX6rxz6Jd0SR0eXbBKMOHVSIcN9Xo
-MONGO_URL = mongodb+srv://rahdimas2:ZeHzZ3vmz8uD3mit@cluster0.v6muq.mongodb.net/?retryWrites=true&w=majority
-ADMINS = 1225177634, 1715129921, 1653477340
-LOG_GRP = -1002015717817
-BOT_ID = 6828449937
+API_ID = 27826569
+API_HASH = 16d4e33ea8d9f7160b61b228c18b5829
+BOT_TOKEN = 7995709523:AAEb9tfsVdDQKdKuikfB2yxP7hPk5NkzMlA
+MONGO_URL = mongodb+srv://stanlev:stanlev@cluster0.lpzo6.mongodb.net/?retryWrites=true&w=majority
+ADMINS = 5770778459, 6208710740, 1734774709
+LOG_GRP = -1002061778178
+BOT_ID = 7995709523
